--- a/HTML/M7L2/code_and_Preformated_text.html
+++ b/HTML/M7L2/code_and_Preformated_text.html
@@ -8,6 +8,7 @@
     &lt;main&gt;...&lt;/main&gt;
     &lt;footer&gt;...&lt;/footer&gt;
 &lt;/div&gt;
-</code></pre> <!-- pre stands for preformating so whatever formating we have inbetween the pre's it's how it will display on our webpage
+</code></pre> 
+<!-- pre stands for preformating so whatever formating we have inbetween the pre's 
+it's how it will display on our webpage
 now code removes the style of the text-->
-[request][steam] Split Fiction ($49.99)
