--- a/BOOTSTRAP/M9L2/color_palette.html
+++ b/BOOTSTRAP/M9L2/color_palette.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- Header section -->
-    <header class="container mt-4 mb-5">   
+    <header class="container mt-4 mb-5 bg-light p-3 rounded">   <!-- bg stands for background-->
         <div class="row align-items-center">
             <div class="col-md-4 mb-3 mb-md-0">
                 <img src="profile.png" alt="Professional profile picture of your name">
@@ -23,7 +23,7 @@
     </header>
 
     <!-- Navigation Section -->
-    <nav class="container p-3 my-4 rounded"> 
+    <nav class="container p-3 my-4 rounded bg-light"> 
         <div class="row">
             <div class="col">
                 <h2 class="h4">Contact</h2> <!-- Class h4 is only for styling -->
@@ -36,7 +36,7 @@
     <!-- Skills Section -->
     <section class="container my-4">
         <h2 class="h4">Skills</h2>
-        <table>
+        <table class="table table-striped table-light"> <!-- table light darkens the table for us and stripes sets a stripe-->
             <tr>
                 <th>Technology</th>
                 <th>Profecicency</th>
@@ -56,7 +56,7 @@
         </table>
     </section>
 
-    <article class="container my-4"> 
+    <article class="container my-4 bg-info text-white p-3 rounded"> 
         <h2 class="h4">Education</h2>
         <ul class="list-unstyled"> <!-- This removes the padding and style-->
             <li><a href="https://universitywebiste.com"><strong>University Name</strong></a>, Bachelor's Degree, Graduation Year</li>
@@ -71,17 +71,17 @@
     </article>
     </div>
 et
-    <aside class="container my-4 p-4"> 
+    <aside class="container my-4 p-4 bg-success text-white rounded"> 
         <h2>Testimonials</h2>
         <blockquote class="blockquote"> <!-- sets a margin for us -->
             <p class="mb-0">Your name has been an exceptional team player, consistently delivering projects on time and with high quality."</p>
         </blockquote>
-        <footer class="blockquote-footer">Fiona Smith, Project Manager at Company Name</footer> <!-- This adjust the font size so it's smaller beneath the paragraph-->
+        <footer class="blockquote-footer text-white">Fiona Smith, Project Manager at Company Name</footer> <!-- This adjust the font size so it's smaller beneath the paragraph-->
     </aside>
     </div>
 
-    <footer class="container-fluid py-4 mt-5 text-center"> <!-- Mostly used for copyright infomation-->
-        <p class="text-muted">&copy; 2024 Your name. All rights reserved.</p> <!-- sets text opacity and color -->
+    <footer class="container-fluid py-4 mt-5 text-center bg-dark"> <!-- Mostly used for copyright infomation-->
+        <p class="text-white">&copy; 2024 Your name. All rights reserved.</p> <!-- sets text to white -->
     </footer>
 </body>
 </html>
