--- a/BOOTSTRAP/M9L3/Nav_components.html
+++ b/BOOTSTRAP/M9L3/Nav_components.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- Header section -->
-    <header class="container mt-4 mb-5">   
+    <header class="container mt-4 mb-5 bg-light p-3 rounded">   <!-- bg stands for background-->
         <div class="row align-items-center">
             <div class="col-md-4 mb-3 mb-md-0">
                 <img src="profile.png" alt="Professional profile picture of your name">
@@ -23,12 +23,32 @@
     </header>
 
     <!-- Navigation Section -->
-    <nav class="container p-3 my-4 rounded"> 
-        <div class="row">
-            <div class="col">
-                <h2 class="h4">Contact</h2> <!-- Class h4 is only for styling -->
-                <p>Email: youremail@example.com</p>
-                <p>Linkedin: <a href="https://www.linkedin.com/in/yourname" class="text-decoration-none">yourname</a></p>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Your Name</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button> <!-- This is the button for the hamburger menu -->
+            <div class="collapse navbar-collapse" id="navbarNav"> <!-- The navbar collapse helps for when we use the html on a 
+                smaller screen turning it into a hamburger which you have to click to see sections to navigate to-->
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#header">Home</a> <!-- the a is an anchor tag so when we click it, it will take 
+                        us to the tag that matches the href id symbol which is dictated by #-->
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#skills">Skills</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#education">Education</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#work-experience">Work Expereince</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#testimonials">Testimonials</a>
+                    </li>
+                </ul>"
             </div>
         </div>
     </nav>
@@ -36,7 +56,7 @@
     <!-- Skills Section -->
     <section class="container my-4">
         <h2 class="h4">Skills</h2>
-        <table>
+        <table class="table table-striped table-light"> <!-- table light darkens the table for us and stripes sets a stripe-->
             <tr>
                 <th>Technology</th>
                 <th>Profecicency</th>
@@ -56,7 +76,7 @@
         </table>
     </section>
 
-    <article class="container my-4"> 
+    <article class="container my-4 bg-info text-white p-3 rounded"> 
         <h2 class="h4">Education</h2>
         <ul class="list-unstyled"> <!-- This removes the padding and style-->
             <li><a href="https://universitywebiste.com"><strong>University Name</strong></a>, Bachelor's Degree, Graduation Year</li>
@@ -71,17 +91,17 @@
     </article>
     </div>
 et
-    <aside class="container my-4 p-4"> 
+    <aside class="container my-4 p-4 bg-success text-white rounded"> 
         <h2>Testimonials</h2>
         <blockquote class="blockquote"> <!-- sets a margin for us -->
             <p class="mb-0">Your name has been an exceptional team player, consistently delivering projects on time and with high quality."</p>
         </blockquote>
-        <footer class="blockquote-footer">Fiona Smith, Project Manager at Company Name</footer> <!-- This adjust the font size so it's smaller beneath the paragraph-->
+        <footer class="blockquote-footer text-white">Fiona Smith, Project Manager at Company Name</footer> <!-- This adjust the font size so it's smaller beneath the paragraph-->
     </aside>
     </div>
 
-    <footer class="container-fluid py-4 mt-5 text-center"> <!-- Mostly used for copyright infomation-->
-        <p class="text-muted">&copy; 2024 Your name. All rights reserved.</p> <!-- sets text opacity and color -->
+    <footer class="container-fluid py-4 mt-5 text-center bg-dark"> <!-- Mostly used for copyright infomation-->
+        <p class="text-white">&copy; 2024 Your name. All rights reserved.</p> <!-- sets text to white -->
     </footer>
 </body>
 </html>
